--- a/public/stylesheets/documents.css
+++ b/public/stylesheets/documents.css
@@ -138,7 +138,19 @@ div#modalPageButtons {
 input {
     height: 30px;
     width: auto;
-    borderRadius: 5px;
+    border-radius: 5px;
+}
+
+button {
+    border-radius: 5px;
+}
+
+th {
+    background-color: lightgray;
+}
+
+tr {
+    border-bottom: 1px solid black;
 }
 
 /*
